...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@android:color/darker_gray"
                    />
                <LinearLayout
                    android:id="@+id/pop"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
...
                        android:layout_marginLeft="12dp"
                        android:background="@android:color/darker_gray"
                        android:layout_width="1.5dp"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:id="@+id/cancel"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:drawableLeft="@mipmap/ic_cancel"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:text="Cancel"
                        android:onClick="CancelSlot"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />


                </LinearLayout>
...
